--- a/src/assets/scss/views/_test.scss
+++ b/src/assets/scss/views/_test.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
 
-    height: 70%;
+    height: 50%;
 
 
     background-color: var(--super-dark-orange);
@@ -55,12 +55,14 @@
     }
 }
 .TestButtons{
+    display: flex;
+    justify-content: center;
     width: 100%;
     .Next_Button{
         width: 90%;
     
         display: flex;
-        justify-content: end;
+        justify-content: start;
         button{
             cursor: pointer;
             
